Fix latest books section alignment

--- a/css/style.css
+++ b/css/style.css
@@ -449,6 +449,7 @@ body {
   margin: 0;
   padding: 1rem 6rem;
   display: block;
+  text-align: center;
 }
 
 /*Recommendations section*/
